# rift

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Package.swift  README.md  docker-compose.yml  fly.toml  railway.toml
client/cli/: Cargo.toml  install.sh
client/cli/src/: config.rs  context.rs  error.rs  lib.rs  main.rs  ui.rs  util.rs  util_tests.rs  wrangler.rs
client/cli/src/commands/: analytics_stats.rs  billing.rs  cancel.rs  completions.rs  create_link.rs  doctor.rs  init.rs  list_links.rs  login.rs  logout.rs  mod.rs  qr.rs  setup_app.rs  setup_domain.rs  stats.rs  subscribe.rs  team_invite.rs  team_list.rs  team_remove.rs  test_link.rs  update.rs  version.rs  whoami.rs
client/cli/tests/: cli.rs  commands.rs  config.rs  error.rs  pure.rs
client/cli/tests/common/: mod.rs
client/mcp-rust/: Cargo.toml
client/mcp-rust/src/: lib.rs
client/mcp-rust/tests/: serialization.rs
client/mobile/ffi/: Cargo.toml
client/mobile/ffi/src/: lib.rs  lib_tests.rs
client/mobile/flutter_ffi/: Cargo.toml  build.rs
client/mobile/flutter_ffi/src/: api.rs  lib.rs
sdk/mobile/ffi/: Cargo.toml
sdk/mobile/ffi/src/: lib.rs
server/: Cargo.toml  Dockerfile  fly.sandbox.toml  fly.toml
server/examples/themes/: README.md  atelier-stay.json  nord-roast.json  volt-run.json
server/rift-macros/: Cargo.toml
server/src/: app.rs  architecture_tests.rs  error.rs  lib.rs  main.rs  main_tests.rs
server/src/api/: mod.rs
server/src/api/affiliates/: mod.rs  routes.rs
server/src/api/agents/: mod.rs  routes.rs
server/src/api/analytics/: mod.rs  models.rs  routes.rs
server/src/api/apps/: mod.rs  models.rs  repo.rs  routes.rs
server/src/api/attribution/: mod.rs  routes.rs
server/src/api/auth/: email_interstitial.rs  forbidden_response.rs  keys.rs  middleware.rs  mod.rs  models.rs  repo.rs  routes.rs
server/src/api/auth/oauth/: mod.rs  models.rs  routes.rs
server/src/api/auth/publishable_keys/: mod.rs  models.rs  routes.rs
server/src/api/auth/secret_keys/: mod.rs  models.rs  routes.rs
server/src/api/auth/sessions/: mod.rs  models.rs  routes.rs  routes_tests.rs
server/src/api/auth/tenants/: mod.rs  routes.rs
server/src/api/auth/users/: mod.rs  models.rs  routes.rs
server/src/api/billing/: mod.rs  models.rs  quota_response.rs  routes.rs  stripe_webhook.rs
server/src/api/conversions/: mod.rs  models.rs  routes.rs
server/src/api/domains/: mod.rs  models.rs  repo.rs  routes.rs
server/src/api/health/: mod.rs  models.rs  routes.rs
server/src/api/lifecycle/: mod.rs  routes.rs
server/src/api/links/: landing.rs  landing_page.html  landing_page.rs  llms.txt  mod.rs  models.rs  palette.rs  palette_tests.rs  qr.rs  repo.rs  routes.rs  service.rs
server/src/api/sdk_keys/: mod.rs  repo.rs  routes.rs
server/src/api/themes/: mod.rs  models.rs  repo.rs  routes.rs
server/src/api/webhooks/: mod.rs  models.rs  repo.rs  routes.rs
server/src/core/: cdp.rs  config.rs  config_tests.rs  db.rs  email.rs  email_tests.rs  http.rs  mod.rs  models.rs  origin.rs  origin_tests.rs  platform.rs  platform_tests.rs  rate_limit.rs  threat_feed.rs  threat_feed_tests.rs  validation.rs  validation_tests.rs  webhook_dispatcher.rs
server/src/core/public_id/: mod.rs  models.rs  public_id_tests.rs
server/src/error/: mod.rs  models.rs
server/src/mcp/: mod.rs  models.rs  server.rs  tools.rs
server/src/migrations/: m001_auth_split.rs  m002_billing_foundation.rs  m003_unify_tokens.rs  m004_secret_key_scope_backfill.rs  m005_attribution_cutover.rs  mod.rs
server/src/sdk/: relay.js  rift.js
server/src/services/: mod.rs
server/src/services/affiliates/: mod.rs  models.rs  repo.rs  service.rs  service_tests.rs
server/src/services/agents/: mod.rs  models.rs  repo.rs  service.rs
server/src/services/analytics/: models.rs  service.rs
server/src/services/app_users/: models.rs  repo.rs
server/src/services/apps/: models.rs  repo.rs
server/src/services/auth/: keys.rs  mod.rs  scope.rs  scope_tests.rs
server/src/services/auth/oauth/: mod.rs  models.rs  providers.rs  service.rs  service_tests.rs
server/src/services/auth/permissions/: context.rs  context_tests.rs  mod.rs  models.rs
server/src/services/auth/publishable_keys/: models.rs  repo.rs
server/src/services/auth/secret_keys/: mod.rs  models.rs  models_tests.rs  new_repo.rs  repo.rs  service.rs
server/src/services/billing/: effective_tier.rs  effective_tier_tests.rs  email.rs  handoff.rs  limits.rs  magic_links_service.rs  mod.rs  models.rs  quota.rs  quota_tests.rs  retention.rs  service.rs  service_tests.rs  stripe_client.rs  stripe_client_tests.rs
server/src/services/conversions/: mod.rs  models.rs  parsers.rs  parsers_tests.rs  repo.rs  repo_tests.rs  service.rs
server/src/services/domains/: models.rs  repo.rs  service.rs
server/src/services/install_events/: models.rs  repo.rs
server/src/services/landing/: mod.rs  models.rs
server/src/services/links/: models.rs  repo.rs  service.rs  service_tests.rs
server/src/services/tokens/: mod.rs  model.rs  models.rs  repo.rs  service.rs
server/src/services/webhooks/: dispatcher.rs  mod.rs  models.rs  models_tests.rs  repo.rs  service.rs
server/tests/api/: affiliate_credentials.rs  affiliates.rs  apps.rs  auth.rs  branding.rs  domains.rs  health.rs  links.rs  mod.rs  resolve.rs  resolve_matrix.rs  sdk_keys.rs  secret_keys_crud.rs  themes.rs  users.rs  webhooks.rs
server/tests/common/: mod.rs
server/tests/common/mocks/: affiliates.rs  app_users.rs  apps.rs  auth.rs  conversions.rs  domains.rs  links.rs  mod.rs  sdk_keys.rs  secret_keys.rs  tenants.rs  themes.rs  tokens.rs  usage.rs  users.rs  webhooks.rs
(+209 files in other folders)
