[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "limit"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = "0.38"
sentry-tracing = "0.38"
thiserror = "2"
x402-axum = "1.4"
x402-chain-eip155 = { version = "1.4", features = ["server", "client"] }
x402-types = "1.4"
alloy-primitives = "1.5.7"
mongodb = "3.5"
reqwest = { version = "0.12", features = ["json"] }
alloy-signer-local = { version = "1.4", features = ["mnemonic"] }
resend-rs = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
hex = "0.4"
dotenvy = "0.15"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
tower = "0.5"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
