[package]
name = "rift-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rift_client_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webbrowser = "1"
