[package]
name = "rift-cli"
version = "0.2.5"
edition = "2021"

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
dirs = "6"
getrandom = "0.2"
indicatif = "0.17"
flate2 = "1"
tiny_http = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rift_client_core = { path = "../core" }
self-replace = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webbrowser = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
