[package]
name = "rift_ffi"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rift_sdk_core = { path = "../core" }
uniffi = { version = "0.29", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.6"
serde_json = "1"
