[package]
name = "rift_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rift_sdk_core = { path = "../core" }
uniffi = { version = "0.29", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
thiserror = "2"
